# subtrace

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
docs/superpowers/memory/debug/: INDEX.md
docs/superpowers/memory/debug/entries/2026-04/: 2026-04-20-1.md
docs/superpowers/memory/milestone/: INDEX.md
docs/superpowers/memory/milestone/entries/2026-04/: 2026-04-20-1.md
docs/superpowers/plans/: 2026-04-19-subroute-as-topology.md  2026-04-19-subroute-horizontal-graph.md  2026-04-19-subroute-html-graph.md  2026-04-19-subroute-report-density.md  2026-04-19-subroute-svg-topology.md  2026-04-19-subroute.md
docs/superpowers/specs/: 2026-04-19-subroute-as-topology-design.md  2026-04-19-subroute-design.md  2026-04-19-subroute-horizontal-graph-design.md  2026-04-19-subroute-html-graph-design.md  2026-04-19-subroute-report-density-design.md  2026-04-19-subroute-svg-topology-design.md
fixtures/: google-subscription.txt  sample-subscription.txt
src/: app.rs  ip_meta.rs  lib.rs  main.rs  model.rs  ping.rs  progress.rs  report.rs  subscription.rs  topology_svg.rs  traceroute.rs
